fixed aligning of edit button

--- a/src/css/GridToolbar.css
+++ b/src/css/GridToolbar.css
@@ -71,16 +71,16 @@ body {
     font-weight: bolder;
     font-family: sans-serif;
     font: 100px;
-    background-color: rgb(156, 48, 48)
-    
+    /* background-color: rgb(156, 48, 48)
+    */
   }
   .Toolbar-txt{
-    align-content: left;
+    text-align: center;
     font-size: 15px;
     font-weight: bold;
     font-family: sans-serif;
     object-fit: cover;
-    text-align: center;
+    
     padding: 10px 40px;
 
     background-color: rgb(95, 35, 145)
